# processforge-validation

./: .env.example  .gitignore  LICENCE  README.md  pyproject.toml  validate.py  validation.xlsx
src/: validate.py
tests/: test_validate.py
